--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
      <header>
          <div class="header-content">
              <!-- Add your profile picture here -->
-             <img src="065a6907-0305-486f-b6c9-344ab584e68c.jpg" alt="Your Profile Picture" class="profile-picture">
-             <h1>V.Deepak</h1> 1 Has a conversation. Original line has a conversation.
+             <img src="tamil.jpg" alt="Your Profile Picture" class="profile-picture">
+             <h1>K.Tamilmani</h1> 1 Has a conversation. Original line has a conversation.
              <p>I am computer science student </p>
          </div>
      </header>
@@ -177,7 +177,7 @@
  
      <footer>
          <p>&copy;
-V.Deepak</p>
+K.Tamilmani</p>
      </footer>
  
      <script>
